statics/styles/style.css
/* ... */
#marquee a
{
    color: #F2843B;
    display: block;
    height: 30px;
    line-height: 30px;
    margin: 0 0 0 430px;
    position: absolute;
    width: 45px;
}

#index-calendar
{
    background: #FFEDB7;
    border-radius: 15px;
    float: left;
    height: 400px;
    margin-top: 40px;
    width: 30%;
}

#index-calendar > div
{
    background-position: -1048px -880px;
    height: 0;
    margin-top: -45px;
    padding: 50px 10px 20px 10px;
    position: relative;
}

#club #calendar  .calendar-table,
#index-calendar .calendar-table
{
    border-collapse: collapse;
}

#club #calendar  .calendar-table caption,
#index-calendar .calendar-table caption
{
    margin: 15px 0 10px 0;
}

#club #calendar  .calendar-table td,
#index-calendar .calendar-table td
{
    text-align: center;
    width: 28px;
    cursor: pointer;
}


#club #calendar .calendar-table td.today,
#index-calendar .calendar-table td.today
{
    color: red;
}

#club #calendar .calendar-table td.hover,
#index-calendar .calendar-table td.hover
{
    color: green;
}

#club #calendar .calendar-table td.selected,
#index-calendar .calendar-table td.selected
{
    outline: 1px solid #000;
}

#club #calendar  .calendar-table thead,
#index-calendar .calendar-table thead
{
    display: block;
}

#club #calendar  .calendar-table thead td,
#index-calendar .calendar-table thead td
{
    color: #af8d5a;
    text-align: center;
}

#club #calendar  .calendar-table thead td.weekend,
#index-calendar .calendar-table thead td.weekend
{
    color: red;
}

#club #calendar  .calendar-table tbody,
#index-calendar .calendar-table tbody
{
    border-top: 1px solid #946722;
    border-bottom: 1px solid #946722;
    display: block;
}

#club #calendar  .todolist-table td,
#index-calendar .todolist-table td
{
    width: 100px;
    text-align: center;
}

#club #calendar  .todolist-table thead td,
#index-calendar .todolist-table thead td
{
    color: #946722;
}


#calendar .scroll-content
{
    width: 484px;
}

#calendar .scroll-container
{
    width: 484px;
}

#calendar-recycle,
#calendar-recycle h4,
#calendar-recycle a.calendar-show-event,
#calendar-recycle a.calendar-show-event:active,
#calendar-recycle a.calendar-hide-event,
#calendar-recycle a.calendar-hide-event:active,
#calendar-event,
#calendar-recycle a.back,
#calendar-event a.back,
#calendar-subscript,
.calendar-create
{
    background: url('../images/calendar.png');
}

.calendar
{
    background-position: 0 -288px;
    margin: 0 5px;
    padding: 60px;
    height: 680px;
    border-radius: 15px;
}

.calendar .left
{
    height: 40%;
    width: 40%;
    padding: 20% 5% 40% 5%;
    float: left;
}

.calendar .left table
{
    width: 100%;
    height: 100%;
    font-size: 1.2em;
    position: relative;
}

.calendar .left table thead td
{
    text-align: center;
}

.calendar .left table tbody td
{
    cursor: pointer;
    border-radius: 5px;
    text-align: center;
}

.calendar .left table tbody td.today
{
    color: red;
}

.calendar .date
{
    margin: 0;
    display: block;
    float: left;
    width: 50%;
    text-align: center;
    height: 2em;
    font-size: 2em;
    line-height: 2em;
    text-shadow: 2px 2px 8px;
    color: rgba(21, 50, 206, 0.67);
}

.calendar .right
{
    height: 80%;
    width: 50%;
    float: left;
    
}

.calendar .right div
{
    background-position: -848px -1264px;
    padding-top: 2em;
    width: 100%;
    float: left;
}

.calendar .right div h4
{
    background-position: -1248px -96px;
    font-size: 1.5em;
    padding: 0 0 0 40px;
    height: 32px;
    line-height: 32px;
}

.calendar .right div li
{
    width: 88%;
    height: 32px;
    line-height: 32px;
}

.calendar .right div li:hover
{
    background: rgba(255, 255, 126, 0.17);
    border-radius: 5px;
}

.calendar .right div li:hover a.calendar-hide-event
{
    display: inline-block;
}

.calendar .right div li a
{
    font-size: 1.2em;
    margin-right: 0.5em;
}

.calendar a.calendar-hide-event
{
    background-position: -32px -96px;
    width: 32px;
    height: 32px;
    text-indent: -10000px;
    display: none;
    float: right;
    margin-right: 32px;
}

a.calendar-hide-event:hover
{
    background-color: rgba(255, 255, 199, 0.8);
}

.calendar .prompt
{
    background: gray;
    background: rgba(0, 0, 0, 0.7);
    display: none;
    border-radius: 5px;
}

.calendar .prompt i
{
    border: 5px solid;
    border-color: transparent transparent gray transparent;
    border-color: rgba(0, 0, 0, 0.7) transparent transparent transparent;
    margin-bottom: -10px;
    margin-left: 5px;
    display: block;
    width: 0;
    height: 0;
}


.calendar .prompt ul
{
    margin: 0;
    padding: 5px;
    list-style: none;
}

.calendar .prompt ul li
{
    color: white;
}

.calendar .calendar-buttons
{
    padding-left: 32px;
    height: 32px;
    display: inline-block;
    line-height: 32px;
    margin-right: 1em;
    font-size: 1.4em;
}

.calendar .calendar-subscript-button
{
    background-position: -32px -160px;
}

.calendar .calendar-hide-button
{
    background-position: -32px -96px;
}

.calendar .calendar-create-button
{
    background-position: -32px -128px;
}

#calendar-event,
#calendar-recycle,
#calendar-subscript,
.calendar-create
{
    height: 296px;
    margin: 0 5px;
    padding: 60px;
    border-radius: 15px;
    position: relative;
}

#calendar-recycle
{
    background-repeat: no-repeat;
    background-position: 0px 0px;
}

#calendar-recycle .scroll-container
{
    height: 232px;
}

#calendar-recycle h4
{
    background-repeat: no-repeat;
    background-position: 0px -864px;
    padding: 0px 0 32px 45px;
    font-size: 2em;
    width: 220px;
}

#calendar-recycle a.calendar-show-event,
#calendar-recycle a.calendar-hide-event
{
    padding-left: 20px;
    height: 20px;
    line-height: 20px;
    display: inline-block;
    background-color: #FFFFFF;
    border-radius: 5px;
    color: #27120a;
}
/* ... */

